initial beta launch

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lacona App command to search the internet",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src --out-dir lib",
+    "build": "babel --stage 0 src --out-dir lib",
     "clean": "rimraf lib",
     "prepublish": "npm run clean && npm run build"
   },
@@ -31,13 +31,13 @@
   "homepage": "https://github.com/brandonhorst/lacona-command-search-internet",
   "dependencies": {
     "lacona-command-config": "0.0.1",
-    "lacona-phrase": "^0.7.0",
+    "lacona-phrase": "^0.9.1",
     "lacona-phrase-string": "^0.1.0",
     "lodash": "^3.10.1"
   },
   "devDependencies": {
     "babel": "^5.8.29",
-    "lacona": "^0.29.0",
+    "lacona": "^0.35.0",
     "rimraf": "^2.4.3"
   }
 }
