--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "lacona-command-search-internet",
+  "name": "lacona-search-internet",
   "version": "0.1.0",
   "description": "Lacona App command to search the internet",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel --stage 0 src --out-dir lib",
+    "test": "mocha --compilers jsx:babel-register --watch-extensions jsx",
+    "build": "mkdir -p lib; babel src --out-dir lib",
     "clean": "rimraf lib",
     "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brandonhorst/lacona-command-search-internet.git"
+    "url": "https://github.com/laconalabs/lacona-search-internet.git"
   },
   "keywords": [
     "lacona",
@@ -26,18 +27,31 @@
   "author": "@brandonhorst",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/brandonhorst/lacona-command-search-internet/issues"
+    "url": "https://github.com/laconalabs/lacona-search-internet/issues"
   },
-  "homepage": "https://github.com/brandonhorst/lacona-command-search-internet",
+  "homepage": "https://github.com/laconalabs/lacona-search-internet",
   "dependencies": {
-    "lacona-command-config": "0.0.1",
-    "lacona-phrase": "^0.9.1",
-    "lacona-phrase-string": "^0.1.0",
-    "lodash": "^3.10.1"
+    "elliptical": "^1.0.0-rc9",
+    "elliptical-string": "^1.0.0-rc2",
+    "lacona-api": "0.1.0",
+    "lacona-command": "^0.2.0",
+    "lodash": "^4.9.0"
   },
   "devDependencies": {
-    "babel": "^5.8.29",
-    "lacona": "^0.35.0",
-    "rimraf": "^2.4.3"
+    "babel-cli": "^6.7.5",
+    "babel-plugin-transform-react-jsx": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "rimraf": "^2.5.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "transform-react-jsx"
+    ]
   }
 }
