--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "lacona-search-internet",
   "version": "0.1.3",
   "description": "Lacona App command to search the internet",
-  "main": "lib/index.js",
+  "lacona": {
+    "extensions": "build/extensions.js",
+    "config": "config.json"
+  },
   "scripts": {
-    "test": "mocha --compilers jsx:babel-register --watch-extensions jsx",
-    "build": "mkdir -p lib; babel src --out-dir lib",
-    "clean": "rimraf lib",
-    "prepublish": "npm run clean && npm run build"
+    "build:build": "mkdir -p build; browserify src/extensions.jsx -t babelify -o build/extensions.js -x lacona-phrases -x elliptical -x lacona-api --standalone extensions --extension=jsx",
+    "build:lib": "babel src --out-dir lib",
+    "clean": "rimraf build lib",
+    "prepublish": "npm run clean && npm run build:build && npm run build:lib"
   },
   "repository": {
     "type": "git",
@@ -31,19 +34,14 @@
   },
   "homepage": "https://github.com/laconalabs/lacona-search-internet",
   "dependencies": {
-    "elliptical": "^1.0.0-rc10",
-    "elliptical-string": "^1.0.0-rc2",
-    "lacona-api": "0.1.1",
-    "lacona-command": "^0.2.1",
-    "lodash": "^4.9.0"
+    "lodash": "^4.13.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5",
+    "babel-cli": "^6.9.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
     "rimraf": "^2.5.2"
   },
   "babel": {
